--- a/mvc1/servlet/servlet/src/main/webapp/basic.html
+++ b/mvc1/servlet/servlet/src/main/webapp/basic.html
@@ -26,7 +26,8 @@
         </ul>
     </li>
     <li>HttpServletResponse
-        <ul> <li><a href="/response-header">기본 사용법, Header 조회</a></li>
+        <ul>
+            <li><a href="/response-header">기본 사용법, Header 조회</a></li>
             <li>HTTP 응답 메시지 바디 조회
                 <ul>
                     <li><a href="/response-html">HTML 응답</a></li>
